--- a/src/index.css
+++ b/src/index.css
@@ -6,14 +6,14 @@
 
 @font-face {
 font-family: "Gambetta";
-src: local("GoldmanLight"),
+src: local("Gambettaight"),
  url('./fonts/Gambetta-Light.woff') format('woff');
 font-weight: 300;
 }
 
 @font-face {
 font-family: "Gambetta";
-src: local("GoldmanBold"),
+src: local("GambettaBold"),
  url('./fonts/Gambetta-Bold.woff') format('woff');
 font-weight: 700;
 }
