--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -8,14 +8,15 @@
   left: 50%;
 }
 
-.image-display-container {
+.company-logo-display-container {
+  /* position: center */
   display: flex;
   margin: 0px 150px;
   flex-wrap: wrap;
   justify-content: center;
 }
 
-.image-display-container img {
+.company-logo-display-container img {
   filter: grayscale(1) brightness(1);
   max-width: 100px;
   object-fit: contain;
@@ -24,7 +25,41 @@
 
 }
 
-.image-display-container img:hover {
+.company-logo-display-container img:hover {
   filter: initial;
   transform: scale(1.05);
+}
+
+.projects-display-container {
+  display: grid;
+  grid-gap: 10px;
+  padding: 10px;
+  color: #fff;
+  background-color: #444;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 290px);
+}
+
+.grid-item {
+  background-color: #bebebe;
+  color: #444;
+  /* border-radius: 5px; */
+  /* padding: 20px; */
+  /* font-size: 20px; */
+}
+
+.grid-item img {
+  width: 100%;
+  display: block;
+}
+
+.grid-item div {
+  width: 100%;
+  padding-top: 10px;
+  padding-left: 10px;
+  font-size: 20px;
+}
+
+.small-text {
+  font-size: 12px;
 }
