Moves arrow to App component; sets onClose for project page

--- a/src/components/project/project.css
+++ b/src/components/project/project.css
@@ -13,11 +13,11 @@
   visibility: hidden;
 }
 
-h1 {
+.project h1 {
   margin: 2%;
 }
 
-h1:after {
+.project h1:after {
     position: absolute;  
     content: '';
     left: 2%;
@@ -25,5 +25,18 @@ h1:after {
     width: 96%;
     height: 1px;
     background-color: rgba(0,0,0,.3);
+}
+
+.close-icon {
+  position: fixed;
+  top: 3%;
+  right: 2%;
+  font-size: 50px;
+
+}
+
+.close-icon:hover {
+  color: grey;
+  cursor: pointer;
 }
 
