--- a/src/components/project/project.css
+++ b/src/components/project/project.css
@@ -7,24 +7,31 @@
   width: 100%;
   height: 100%;
   z-index: 100;
+  transition: opacity 0.75s, visibility 0.75s;
 }
 
 .hidden {
   visibility: hidden;
+  opacity: 0;
 }
 
 .project h1 {
+  display: inline-block;
   margin: 2%;
 }
 
 .project h1:after {
-    position: absolute;  
-    content: '';
-    left: 2%;
-    top: 10%;
-    width: 96%;
-    height: 1px;
-    background-color: rgba(0,0,0,.3);
+  position: absolute;  
+  content: '';
+  left: 2%;
+  top: 10%;
+  width: 96%;
+  height: 1px;
+  background-color: rgba(0,0,0,.3);
+}
+
+.project-specs {
+  margin-left: 2%;
 }
 
 .close-icon {
@@ -40,3 +47,16 @@
   cursor: pointer;
 }
 
+
+.project-specs span {
+  margin: 20px;
+}
+
+.project-specs p {
+  font-size: 18px;
+  line-height: 12px;
+}
+
+b {
+  font-weight: 500;
+}
