--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -2,3 +2,10 @@
   font: Thin 100 Roboto;
   text-align: center;
 }
+
+.header-small {
+  
+  font-size: 20px;
+  text-align: center;
+  top: 2px;
+}
