--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,14 @@ canvas {
   height: 1em;
 }
 
+.about-button {
+  cursor: pointer;
+  position: absolute;
+  left: 5px;
+  top: 50%;
+  transform: rotate(270deg);
+}
+
 @font-face {
 font-family: "Gambetta";
 src: local("Gambettaight"),
