Configures z-index of elements; constrains orbit controls; pulls setTexture out of Sphere component so it can be shared; begins setting up method to create many spheres

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,10 +1,11 @@
 .header {
   font: Thin 100 Roboto;
   text-align: center;
+  z-index: 1;
+  position: relative;
 }
 
 .header-small {
-  
   font-size: 20px;
   text-align: center;
   top: 2px;
