--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -1,15 +1,6 @@
 canvas {
   height: 520px;
 }
-
-.nav-arrow {
-  display: flex;
-  font-size: 40px;
-  margin: 0 auto;
-  width: 1em;
-  height: 1em;
-}
-
 .about-button {
   cursor: pointer;
   position: absolute;
@@ -29,3 +20,47 @@ canvas {
   position: relative;
   z-index: 0;
   background: white;}
+
+.nav-arrow {
+  position: relative;
+  z-index: 2;
+  margin: 0 auto;
+  width: 25px;
+  height: 50px;
+}
+
+.nav-arrow-left-tip, .nav-arrow-right-tip {
+  position: absolute;
+  z-index: 2;
+  width: 1px;
+  height: 15px;
+  bottom: 0;
+  background-color: black;
+}
+.nav-arrow-left-tip {
+  position: absolute;
+  transform: rotate(-55deg);
+  left: 6px;
+}
+.nav-arrow-right-tip {
+  position: absolute;
+  transform: rotate(55deg);
+  right: 6px;
+}
+
+
+/* USE FOR 'X' ICON */
+/* .nav-arrow-left-tip, .nav-arrow-right-tip {
+  position: absolute;
+  z-index: 2;
+  width: 1px;
+  height: 15px;
+  bottom: 0;
+  background-color: black;
+}
+.nav-arrow-right-tip {
+  transform: rotate(-45deg);
+}
+.nav-arrow-left-tip {
+    transform: rotate(45deg);
+} */
