Makes small header clickable back to main page; adds various spacing elements

--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -10,7 +10,7 @@ canvas {
   transform: rotate(270deg);
 }
 
-.spacing-element {
+.spacing-element-for-canvas {
   height: 455px;
   z-index: -1;
   position: 'relative';
@@ -46,6 +46,10 @@ canvas {
   position: absolute;
   transform: rotate(55deg);
   right: 6px;
+}
+
+.footer {
+  height: 400px;
 }
 
 
