--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -19,3 +19,10 @@ a {
   right: 0px;
   margin: 10px;
 }
+
+.cv {
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 30px;
+  vertical-align: top;
+}
