--- a/src/components/work/work.css
+++ b/src/components/work/work.css
@@ -25,7 +25,7 @@
   grid-gap: 10px;
   padding: 10px;
   color: #fff;
-  background-color: #444;
+  background-color: transparent;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(2, 290px);
 }
