--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
   /* font-family: 'Roboto', sans-serif; */
   font-family: 'Karla', sans-serif;
   font-weight: 300;
+  scroll-behavior: smooth;
 }
 
 p {
