--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -2,9 +2,9 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  height: 400px;
+  height: 150px;
   padding: 0px 20px;
-
+  background-color: transparent;
 }
 
 .contact-logos {
@@ -19,9 +19,9 @@
 
 .icons-container {
   position: relative;
-  /* bottom: 0px;
-  right: 0px; */
   width: 100%;
+  background-color: transparent;
+
 }
 
 .cv {
@@ -35,12 +35,16 @@
   margin-top: auto;
   margin-right: 10px;
   text-align: right;
+  background-color: transparent;
+
 }
 
 .footer-text p {
   font-size: 15px;
   line-height: 25px;
   margin: 0px;
+  background-color: transparent;
+
 }
 
 .email-div {
@@ -48,4 +52,6 @@
   font-size: 15px;
   margin-bottom: 10px;
   margin-right: 10px;
+  background-color: transparent;
+
 }
