Some improvements to spacing and styling of the projects grid and contents; removed class on localization container div because it doesn't need extra CSS; small styling tweak to Project modal

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,3 +1,4 @@
+/* The main header is inline-block to maximize the space on the canvas where the cursor is ew-resize */
 .header {
   display: inline-block;
   position: relative;
@@ -8,11 +9,10 @@
 }
 
 .header-small {
-  position: fixed;
-  width: 100%;
-  font-size: 20px;
   text-align: center;
   top: 2px;
+
+  font-size: 20px;
   cursor: pointer;
 }
 
