--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -17,8 +17,8 @@ canvas {
 }
 
 .main-content {
-  position: relative;
-  z-index: 0;
+  /* position: relative; */
+  /* z-index: 0; */
 }
 
 .nav-arrow {
