--- a/src/components/work/work.css
+++ b/src/components/work/work.css
@@ -1,7 +1,9 @@
 .company-logo-display-container {
-  /* position: center */
   display: flex;
-  margin: 0px 150px;
+  margin-top: 100px;
+  margin-left: 100px;
+  margin-right: 100px;
+  margin-bottom: 100px;
   flex-wrap: wrap;
   justify-content: center;
 }
@@ -22,12 +24,13 @@
 
 .projects-display-container {
   display: grid;
-  grid-gap: 10px;
-  padding: 10px;
+  grid-column-gap: 8rem;
+  grid-row-gap: 4rem;
+  padding: 0 8rem;
   color: #fff;
   background-color: transparent;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(2, 290px);
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 425px);
 }
 
 .spacing-element-between-logos-and-projects {
@@ -35,25 +38,24 @@
   position: relative;
 }
 
-.grid-item {
-  background-color: #bebebe;
-  color: #444;
-  cursor: pointer;
-  /* border-radius: 5px; */
-  /* padding: 20px; */
-  /* font-size: 20px; */
-}
-
 .grid-item img {
   width: 100%;
   display: block;
 }
 
-.grid-item div {
+.grid-item p {
+  /* background-color: #bebebe; */
+  color: #444;
+  font-weight: normal;
+  font-size: 1.3rem;
+}
+
+.grid-item {
   width: 100%;
-  padding-top: 10px;
-  padding-left: 10px;
   font-size: 20px;
+  font-weight: normal;
+  cursor: pointer;
+
 }
 
 .small-text {
