--- a/src/components/project/project.css
+++ b/src/components/project/project.css
@@ -41,6 +41,19 @@
   margin-right: 20%;
 }
 
+.project-specs p a {
+  text-decoration: underline;
+  /* background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
+  background-repeat: no-repeat;
+  background-size: 100% 0.2em;
+  background-position: 0 88%;
+  transition: background-size 0.25s ease-in; */
+}
+
+.project-specs a:hover {
+    /* background-size: 100% 88%; */
+  }
+
 
 .project-specs span {
   margin: 20px;
