--- a/src/components/work/work.css
+++ b/src/components/work/work.css
@@ -22,6 +22,12 @@
   transform: scale(1.05);
 }
 
+.tech-projects-header {
+  font-size: 1.5em;
+  text-align: center;
+  margin: 2em 0;
+}
+
 .projects-display-container {
   display: grid;
   grid-column-gap: 8rem;
