--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,14 @@ p {
   white-space: pre-line;
 }
 
+.side-button {
+  cursor: pointer;
+  position: absolute;
+  left: 5px;
+  top: 50%;
+  transform: rotate(270deg);
+}
+
 canvas {
   cursor: ew-resize;
 }
