--- a/src/components/project/project.css
+++ b/src/components/project/project.css
@@ -10,6 +10,11 @@
   transition: opacity 0.3s, visibility 0.3s;
 }
 
+.project h1 {
+  display: block;
+}
+
+
 .hidden {
   visibility: hidden;
   opacity: 0;
@@ -78,15 +83,38 @@
 
 }
 
-.close-icon {
+/* .close-icon {
   position: fixed;
   top: 3%;
   right: 2%;
   font-size: 50px;
 
+} */
+
+.close-icon:hover .close-left, .close-icon:hover .close-right {
+  background-color: grey;
+}
+.close-icon {
+  position: fixed;
+  top: 2%;
+  right: 2%;
+  z-index: 2;
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
 }
 
-.close-icon:hover {
-  color: grey;
-  cursor: pointer;
+.close-left, .close-right {
+  position: absolute;
+  z-index: 2;
+  width: 1px;
+  height: 35px;
+  bottom: 0;
+  background-color: black;
+}
+.close-right {
+  transform: rotate(-45deg) translate(25px, 10px);
+}
+.close-left {
+    transform: rotate(45deg) translate(10px, -25px);
 }
