Removes errant s in French translation of footer; moves CSS for clicked links being black to index.css; changes name of website in package.json; adds CNAME file

--- a/src/components/project/project.css
+++ b/src/components/project/project.css
@@ -73,9 +73,9 @@
   font-weight: 500;
 }
 
-.project-specs a {
+/* .project-specs a {
   text-decoration: none;
-}
+} */
 
 .project-photo img {
   display: inline-block;
