--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -2,16 +2,15 @@
 .projects-container {
   display: grid;
   grid-template-columns: 30% 68%;
-  grid-auto-rows: 30vh;
-  grid-row-gap: 10vh;
-  grid-column-gap: 2%;
+  grid-auto-rows: auto;
+  grid-row-gap: 20vh;
+  grid-column-gap: 5%;
   margin: 14vw;
 }
 
 .project-specs-container {
-  padding: 10px;
   color: black;
-  background-color: tomato;
+  /* background-color: tomato; */
 }
 
 img {
@@ -19,13 +18,37 @@ img {
   aspect-ratio: auto 200 / 134;
 }
 
+.project-title {
+  font-size: 1.5rem;
+}
+
+.project-short-text {
+  font-size: 1em;
+  line-height: 1.2em;
+  padding-top: 12px;
+  white-space: pre-line;
+}
+
 .tech-logo-container {
   display: flex;
-  justify-content: space-around;
+  /* justify-content: space-around; */
+  /* width: 50%; */
+  /* margin: 0 auto; */
+  padding-top: 12px;
+  /* padding-right: 12px; */
 }
 
 .tech-logo {
-  width: 7%;
-  margin: 1px 9px;
+  width: 32px;
+  margin-right: 40px;
   filter: grayscale(1) brightness(1);
+}
+
+.buttons-container {
+  /* display: flex; */
+  /* justify-content: space-between; */
+  /* width: 30%; */
+  /* margin: 0 auto; */
+  /* background: cyan; */
+  padding: 12px 0;
 }
