--- a/src/components/tag/tag.css
+++ b/src/components/tag/tag.css
@@ -3,6 +3,6 @@
   background-color: lightgrey;
   border-radius: 30px;
   text-align: center;
-  padding: 1.5% 3%;
-  margin: 0.3%;
+  padding: 8px 16px;
+  margin-right: 8px;
 }
