--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,11 @@ p {
   transform: rotate(270deg);
 }
 
+a {
+  text-decoration: none;
+  color: black;
+}
+
 a:visited { 
  text-decoration: none; 
  color: black; 
