Work in progress PhotoSlideshow component; moves onClick for Arrow component to being defined on parent component and passed in

--- a/src/components/tag/tag.css
+++ b/src/components/tag/tag.css
@@ -5,6 +5,7 @@
   border-radius: 30px;
   text-align: center;
   padding: 8px 16px;
+  margin-top: 10px;
   margin-right: 8px;
   cursor: pointer;
 }
