--- a/src/components/photo-slideshow/photo-slideshow.css
+++ b/src/components/photo-slideshow/photo-slideshow.css
@@ -1,3 +1,22 @@
 .photo-slideshow-container {
   position: relative;
+  outline: 2px solid blue ;
 }
+
+.slideshow-panel-left {
+  position: absolute;
+  height: 100%;
+  width: 8%;
+  background-color: pink;
+  opacity: 0.4;
+}
+
+.slideshow-panel-right {
+  position: absolute;
+  right: 0;
+  height: 100%;
+  width: 8%;
+  background-color: pink;
+  opacity: 0.4;
+}
+
