--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -1,7 +1,7 @@
   
 .projects-container {
   display: grid;
-  grid-template-columns: 35% 63%;
+  grid-template-columns: 50% 50%;
   grid-auto-rows: auto;
   grid-row-gap: 20vh;
   grid-column-gap: 5%;
@@ -13,30 +13,29 @@
   /* background-color: tomato; */
 }
 
-img {
+.project-image {
   width: 100%;
-  aspect-ratio: auto 200 / 134;
+  aspect-ratio: 2880 / 1664;
+  border-radius: 4px;
 }
 
 .project-title {
-  /* font-size: 1.5rem; */
+  font-size: 2em;
   margin: 0;
+  padding-bottom: 12px;
+  font-weight: 400;
 }
 
 .project-short-text {
-  font-size: 1em;
-  line-height: 1.2em;
+  line-height: 1.4em;
   padding-top: 12px;
-  white-space: pre-line;
+  padding-bottom: 12px;
+  /* white-space: pre-line; */
 }
 
 .tech-logo-container {
   display: flex;
-  /* justify-content: space-around; */
-  /* width: 50%; */
-  /* margin: 0 auto; */
   padding-top: 12px;
-  /* padding-right: 12px; */
 }
 
 .tech-logo {
@@ -57,5 +56,5 @@ img {
   /* width: 30%; */
   /* margin: 0 auto; */
   /* background: cyan; */
-  padding: 12px 0;
+  /* padding: 12px 0; */
 }
