--- a/src/components/arrow/arrow.css
+++ b/src/components/arrow/arrow.css
@@ -48,19 +48,26 @@
   width: 40%;
   aspect-ratio: 1 / 1.5;
   cursor: pointer;
+  opacity: 0;
+  transition: opacity .3s;
 }
+
+.left.nav-arrow:hover,
+.right.nav-arrow:hover {
+  opacity: 1;
+} 
 
 /* For left-pointing arrow */
 
 .left.nav-arrow-left-tip {
   transform: translate(3px, 10px) rotate(-45deg);
-  left: 8px;
+  left: 20px;
   bottom: 50%;
 }
 
 .left.nav-arrow-right-tip {
   transform: translate(3px, 0px) rotate(45deg);
-  left: 8px;
+  left: 20px;
   bottom: 50%;
 }
 
@@ -68,13 +75,13 @@
 
 .right.nav-arrow-left-tip {
   transform: translate(-3px, 0px) rotate(-45deg);
-  right: 8px;
+  right: 20px;
   bottom: 50%;
 }
 
 .right.nav-arrow-right-tip {
   transform: translate(-3px, 10px) rotate(45deg);
-  right: 8px;
+  right: 20px;
   bottom: 50%;
 }
 
@@ -83,6 +90,16 @@
 .white-arrow.nav-arrow-left-tip, 
 .white-arrow.nav-arrow-right-tip {
   background-color: white;
+}
+
+.black-arrow.nav-arrow-left-tip, 
+.black-arrow.nav-arrow-right-tip {
+  background-color: black;
+}
+
+.grey-arrow.nav-arrow-left-tip, 
+.grey-arrow.nav-arrow-right-tip {
+  background-color: grey;
 }
 
 .transparent-arrow.nav-arrow-left-tip, 
