--- a/src/components/photo-slideshow/photo-slideshow.css
+++ b/src/components/photo-slideshow/photo-slideshow.css
@@ -1,11 +1,14 @@
 .photo-slideshow-container {
   position: relative;
+  overflow: hidden;
 }
+
 
 .slideshow-panel-left {
   position: absolute;
   height: 100%;
   width: 8%;
+  /* background-color: rgba(0, 0, 0, 0.5); */
   /* background-color: white;
   opacity: 0.4; */
 }
@@ -15,6 +18,7 @@
   right: 0;
   height: 100%;
   width: 8%;
+  /* background-color: rgba(0, 0, 0, 0.5); */
   /* background-color: white;
   opacity: 0.4; */
 }
