--- a/src/components/work/work.css
+++ b/src/components/work/work.css
@@ -19,6 +19,10 @@
   transform: scale(1.05);
 }
 
+.company-logo-display-container a {
+  display: flex;
+}
+
 .tech-projects-header {
   font-size: 1.5em;
   text-align: center;
@@ -36,10 +40,6 @@
   background-color: transparent;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, 400px);
-}
-
-a {
-  display: flex;
 }
 
 .small-text {
