--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -26,3 +26,12 @@
   /* text-shadow: 0.5px 0.5px grey ; */
   text-shadow: -3px 5px 4px darkgrey
 }
+
+@media (max-width: 375px) {
+  
+  .header {
+    display: block;
+    margin: 0;
+    transform: translate(0, 0);
+  }
+}
