Makes grid cells 100% on max-width: 375px; makes footer font size in em

--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -59,3 +59,12 @@
   /* background: cyan; */
   /* padding: 12px 0; */
 }
+
+@media (max-width: 375px) {
+  .projects-container {
+    display: grid;
+    grid-template-columns: 100%;
+    grid-row-gap: 7vh;
+    margin: 1em;
+  }
+}
