--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -33,8 +33,8 @@
 }
 
 .footer-text p {
-  font-size: 15px;
-  line-height: 25px;
+  font-size: 1em;
+  line-height: 1.6em;
   margin: 0px;
   background-color: transparent;
 
@@ -47,5 +47,4 @@
   margin-bottom: 10px;
   margin-right: 10px;
   background-color: transparent;
-
 }
