Adds media queries to reduce size of localization and side button; adds class to localization buttons, and adjusts side-button CSS accordingly; changes margin of project-specs-container so it is grouped better with the slideshow for that project

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -32,6 +32,11 @@
   .header {
     display: block;
     margin: 0;
+    padding-top: 1.5em;
     transform: translate(0, 0);
+  }
+
+  .header h2 {
+    display: none;
   }
 }
