Moves the side button up in HTML and changes side-button CSS to position absolute to get it in the middle; adds logic to adjust position of plane on the canvas (so the ball is higher) in Scene.

--- a/src/index.css
+++ b/src/index.css
@@ -19,11 +19,11 @@ p {
 .side-button {
   background-color: transparent;
   border: none;
-  position: relative;
+  position: absolute;
   z-index: 2;
   cursor: pointer;
   left: 5px;
-  top: 50%;
+  top: 50vh;
   transform: rotate(270deg);
 }
 
