--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -30,3 +30,10 @@ canvas {
     height: 400px;
   }
 }
+
+@media(min-width: 1660px) {
+    .spacing-element-for-canvas {
+      height: 710px;
+    }
+
+}
