Increases h1, h2, h3, localization and side-button font size by factor of 1.5 at min-width 2160; adds spacing element between arrow and logos to give me options on bigger screens; addss height on spacing-element-for-canvas and spacing-element-between-arrow-and-logos for a bunch of incremental bigger screen widths; in Scene, removes Threejs viewport and uses window.innerWidth and Height instead; adds logic to adjust plane height when screen gets wider (but doesn't change plane height - I decided to just move the contents below down instead

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -40,3 +40,17 @@
     display: none;
   }
 }
+
+@media (min-width: 2160px) {
+  .header h1 {
+    font-size: 3em;
+  }
+
+  .header h2 {
+    font-size: 2.25em;
+  }
+
+  .header h3 {
+    font-size: 1.755em;
+  }
+}
