--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -7,6 +7,10 @@ canvas {
   z-index: -1;
 }
 
+.spacing-element-between-arrow-and-logos {
+
+}
+
 .main-content {
   /* position: relative; */
   /* z-index: 0; */
@@ -46,6 +50,26 @@ canvas {
 
 @media (min-width: 1920px) {
     .spacing-element-for-canvas {
-      height: 700px;
+      height: 760px;
+    }
+}
+
+@media (min-width: 2160px) {
+      .spacing-element-for-canvas {
+        height: 900px;
+    }
+
+      .spacing-element-between-arrow-and-logos {
+        height: 150px;
+    }
+}
+
+@media (min-width: 2560px) {
+      .spacing-element-for-canvas {
+        height: 1000px;
+    }
+
+    .spacing-element-between-arrow-and-logos {
+      height: 200px;
     }
 }
