--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,4 @@
 body { 
-	max-width: 1440px; 
 	margin: 0 auto; 
   margin-top: 0.5em;
 	float: none; 
@@ -83,18 +82,23 @@ canvas {
 }
 
 @media (min-width: 1441px) {
-  body {  
-    margin-top: 2em;
-  } 
 
   .side-button {
     position: absolute;
     top: 0;
     left: auto;
     right: 0;
-    padding-top: 3px;
+    margin-top: 0.2em;
+    margin-right: 0.8em;
     transform: rotate(0);
     font-size: 1.17em;
+  }
+}
+
+@media (min-width: 2160px) {
+
+  .side-button {
+    font-size: 1.755em;
   }
 }
 
