Fixes my media query in last commit for increasing font size about 1440px - corrects max-width 1441 to min-width

--- a/src/index.css
+++ b/src/index.css
@@ -81,7 +81,7 @@ canvas {
   }
 }
 
-@media (max-width: 1441px) {
+@media (min-width: 1441px) {
   .side-button {
     /* Increases font size, while still at side */
     font-size: 1.17em;
