--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -8,6 +8,10 @@ b {
   font-size: 0.5em;
 }
 
+.spacing-element-after-about-header {
+  height: 2em;
+}
+
 .about-p, .values-p {
   margin: 0 15em;
 }
@@ -101,5 +105,35 @@ img {
 @media (min-width: 1680px) {
   .about-p, .values-p {
     margin: 0 20em;
+  }
+}
+
+@media (min-width: 1920px) {
+  .about-p, .values-p {
+    margin: 0 25em;
+  }
+
+    img {
+    width: 44%;
+  }
+}
+
+@media (min-width: 2160px) {
+  .about-p, .values-p {
+    margin: 0 35em;
+  }
+
+  img {
+    width: 34%;
+  }
+}
+
+@media (min-width: 2560px) {
+  .about-p, .values-p {
+    margin: 0 45em;
+  }
+
+  img {
+    width: 34%;
   }
 }
