Adds logic to add class to certain elements if the language is japanese so I can tweak font size and width of small header h3 container; puts parentheses around 'Prouduct Managers in en and jp

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -39,6 +39,11 @@
   .header h2 {
     display: none;
   }
+
+  .japanese.header h3 {
+    margin: 0 auto;
+    width: 70%;
+    }
 }
 
 @media (min-width: 2160px) {
